[Dbms] Dbms interface 구현
unit test 및 어플리케이션 구동을 위하여 Dbms의 기본 interface를 구현한다.

--- a/EMS/EMS/EMS.vcxproj
+++ b/EMS/EMS/EMS.vcxproj
@@ -138,12 +138,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Editor.cpp" />
+    <ClCompile Include="Dbms.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandHandler.h" />
-    <ClInclude Include="Editor.h" />
+    <ClInclude Include="DataBase.h" />
+    <ClInclude Include="Dbms.h" />
     <ClInclude Include="Employee.h" />
     <ClInclude Include="SearchEngine.h" />
   </ItemGroup>
