--- a/EMS/EMS/EMS.vcxproj.filters
+++ b/EMS/EMS/EMS.vcxproj.filters
@@ -18,14 +18,11 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Editor.cpp">
+    <ClCompile Include="Dbms.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Editor.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CommandHandler.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -33,6 +30,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SearchEngine.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DataBase.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Dbms.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
