--- a/EMS/EMS/EMS.vcxproj.filters
+++ b/EMS/EMS/EMS.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="Dbms.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="IOHandler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Printer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
