--- a/EMS/EMS/EMS.vcxproj.filters
+++ b/EMS/EMS/EMS.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Dbms.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="SearchEngine.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandHandler.h">
@@ -44,5 +47,8 @@
     <ClInclude Include="Printer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
