[Database] Database mock 구현
Database에 대하여 mocking 분리와 프로젝트 수정

--- a/EMS/EMS/EMS.vcxproj
+++ b/EMS/EMS/EMS.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="IOHandler.h" />
     <ClInclude Include="Printer.h" />
     <ClInclude Include="SearchEngine.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
