--- a/EMS/TestEMS/TestEMS.vcxproj
+++ b/EMS/TestEMS/TestEMS.vcxproj
@@ -33,6 +33,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClInclude Include="mock_DataBase.h" />
     <ClInclude Include="mock_Dbms.h" />
     <ClInclude Include="mock_SearchEngine.h" />
     <ClInclude Include="pch.h" />
@@ -88,6 +89,7 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
+      <AdditionalIncludeDirectories>..\EMS\EMS;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
