[TEST] mock for IOHandler
IOHandler는 DBMS, Printer class와 연동됩니다.
DBMS와 Printer mock class를 이용하여 TC를 추가했습니다.

Signed-off-by: kjh <cisc@kakao.com>

--- a/EMS/TestEMS/TestEMS.vcxproj
+++ b/EMS/TestEMS/TestEMS.vcxproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ClInclude Include="mock_DataBase.h" />
     <ClInclude Include="mock_Dbms.h" />
+    <ClInclude Include="mock_Printer.h" />
     <ClInclude Include="mock_SearchEngine.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
