--- a/EMS/EMS/EMS.vcxproj
+++ b/EMS/EMS/EMS.vcxproj
@@ -138,11 +138,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataBase.cpp" />
     <ClCompile Include="Dbms.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Printer.cpp" />
     <ClCompile Include="SearchEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ColumnData.h" />
     <ClInclude Include="CommandHandler.h" />
     <ClInclude Include="DataBase.h" />
     <ClInclude Include="Dbms.h" />
