[Feature] IOHandler Body - 1
IOHandler는 parsing, dbms 호출, printer호출 순으로 동작합니다
parsing 중 옵션단계까지 구현했습니다.

Signed-off-by: kjh <cisc@kakao.com>

--- a/EMS/EMS/EMS.vcxproj.filters
+++ b/EMS/EMS/EMS.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DataBase.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="IOHandler.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandHandler.h">
