[refactoring] utility 분리
서로 다른 모듈에서 중복으로 사용되는 string 관련 utility function을 StringUtil로 분리한다.

--- a/EMS/EMS/EMS.vcxproj
+++ b/EMS/EMS/EMS.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="IOHandler.h" />
     <ClInclude Include="Printer.h" />
     <ClInclude Include="SearchEngine.h" />
+    <ClInclude Include="StringUtil.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <ItemGroup>
