--- a/EMS/EMS/EMS.vcxproj.filters
+++ b/EMS/EMS/EMS.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="ColumnData.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="StringUtil.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
