--- a/EMS/EMS_lib/EMS_lib.vcxproj.filters
+++ b/EMS/EMS_lib/EMS_lib.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="..\EMS\Types.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\EMS\StringUtil.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
